# project-83120-handshaker

./: .env.example  .gitignore  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  ROADMAP.md  TERMS_OF_SERVICE.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/db/: mongodb.py
app/models/: signaling.py  user.py
app/routes/: auth.py  connection.py  signaling.py  users.py
app/schemas/: auth.py  connection.py  signaling.py
app/services/: auth_service.py  connection_service.py  signaling_service.py
app/utils/: security.py
